# r0-proc-macro-template

./: Cargo.toml
guest/: Cargo.toml
host/: Cargo.toml  build.rs
host/src/: main.rs
methods/: Cargo.toml
risc0-compile-macros/: Cargo.toml
risc0-compile-macros/src/: lib.rs
