[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.0-rc.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
risc0-compile-macros = { path = "../risc0-compile-macros" }

[build-dependencies]
risc0-build = "1.0.0-rc.4"
